@@ -35,13 +35,17 @@ ReferenceBlock.task.ReferenceProjects=Reference Projects
 BinaryParserPage.task.savingAttributes=Saving Attributes
 BinaryParserPage.label.addr2lineCommand=addr2line Command:
 BinaryParserPage.label.browse=&Browse...
+BinaryParserPage.label.browse1=B&rowse...
+BinaryParserPage.label.browse2=Br&owse...
 BinaryParserPage.label.cppfiltCommand=c++filt Command:
 BinaryParserPage.label.cygpathCommand=cygpath Command:
 
 AbstractErrorParserBlock.task.setErrorParser=Setting Error Parsers...
 ConvertProjectWizardPage.convertTo=Convert to C or C++
+ConvertProjectWizardPage.SelectAll=Select All
 ConvertProjectWizardPage.CProject=C Project
 ConvertProjectWizardPage.CppProject=C++ Project
+ConvertProjectWizardPage.DeselectAll=Deselect All
 AbstractErrorParserBlock.label.up=Up
 AbstractErrorParserBlock.label.down=Down
 AbstractErrorParserBlock.label.selectAll=Select All
